# poetry_ml_template

./: .gitignore  README.md  add-jupyter-venv.sh  pyproject.toml  setup.sh
src/: config.py
