[tool.poetry]
name = "ml_project_template"
version = "0.1.0"
description = ""
authors = ["author"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy =  ">=1.4"
pandas = "^1.3.3"
jupyter = "^1.0.0"
ipykernel = "^6.4.1"
ipython = "^7.28.0"
jupyter_nbextensions_configurator = "^0.4.1"
jupyter-contrib-nbextensions = "^0.5.1"
matplotlib = "^3.4.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
